# smeg

./: .gitattributes  .gitignore  LICENSE  README.md  smeg.code-workspace
src/: Cargo.toml  build.sh  smeg_config.toml
src/.cargo/: config.toml
src/crates/boards/host/native/: Cargo.toml
src/crates/boards/host/native/src/: lib.rs
src/crates/boards/host/rust_std/: Cargo.toml
src/crates/boards/host/rust_std/src/: lib.rs
src/crates/boards/st/nucleo_l432kc/: Cargo.toml  smeg_config.toml
src/crates/boards/st/nucleo_l432kc/src/: lib.rs
src/crates/config/: Cargo.toml  build.rs
src/crates/config/procmacro/: Cargo.toml
src/crates/config/procmacro/src/: all_config.rs  all_config_filenames_macro.rs  config_file_discovery.rs  lib.rs  populate_from_config_macro.rs  results.rs  workspace_config.rs
src/crates/config/procmacro/src/all_config_filenames/: mod.rs
src/crates/config/procmacro/src/populate_from_config/: macro_args.rs  mod.rs
src/crates/config/procmacro/src/results/: mod.rs  string_error.rs
src/crates/config/procmacro/tests/: all_config_filenames_test.rs  populate_from_config_test.rs
src/crates/config/procmacro/tests/fixtures/simple_hierarchical_config/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/simple_hierarchical_config/crates/boards/0/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/simple_hierarchical_config/crates/boards/123_family/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/simple_hierarchical_config/crates/drivers/abc/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/simple_hierarchical_config/crates/drivers/abc_family/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/simple_hierarchical_config/crates/kernel/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/simple_hierarchical_config/crates/mcus/a/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/simple_hierarchical_config/crates/mcus/b_family/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/single_config/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/superfluous_config/: smeg_config.toml  superfluous.toml
src/crates/config/procmacro/tests/fixtures/superfluous_config/crates/kernel/: also_superfluous.toml
src/crates/config/procmacro/tests/fixtures/superfluous_config/crates/kernel/more_nesting/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/superfluous_config/not_in_crates/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/unrusty_naming_config/: smeg_config.toml
src/crates/config/procmacro/tests/fixtures/unrusty_naming_config/crates/kernel/: smeg_config.toml
src/crates/config/procmacro/tests/utils/: mod.rs  workspace_fixture_dir.rs
src/crates/config/src/: lib.rs
src/crates/drivers/task_scheduling/: Cargo.toml
src/crates/drivers/task_scheduling/src/: lib.rs
src/crates/kernel/: Cargo.toml  smeg_config.toml
src/crates/kernel/procmacro/: Cargo.toml
src/crates/kernel/procmacro/src/: lib.rs
src/crates/kernel/src/: lib.rs  panic_handler.rs
src/crates/mcus/arm/cortex_m4/: Cargo.toml
src/crates/mcus/arm/cortex_m4/src/: interrupts.rs  lib.rs
src/crates/mcus/arm/cortex_m4_family/: Cargo.toml
src/crates/mcus/arm/cortex_m4_family/src/: lib.rs
src/crates/mcus/host/native/: Cargo.toml
src/crates/mcus/host/native/src/: lib.rs
src/crates/mcus/host/rust_std/: Cargo.toml  smeg_config.toml
src/crates/mcus/host/rust_std/src/: lib.rs
src/crates/mcus/st/stm32_family/: Cargo.toml  build-config.toml
src/crates/mcus/st/stm32_family/src/: lib.rs
src/crates/mcus/st/stm32l432kc/: Cargo.toml  TODO_HAS_MEMORY_MAPS_stm32l432kc.ld  build.rs  linker-script.lld  linker-script.lld.tt  openocd.cfg  rust-target.json  smeg_config.toml
src/crates/mcus/st/stm32l432kc/src/: blinky_blinky.rs  build.rs  interrupts.rs  kernel_stack.rs  lib.rs  reset_handler.rs
src/crates/os/: Cargo.toml  build.rs
src/crates/os/src/: main.rs
src/crates/testing/host-utils/: Cargo.toml
src/crates/testing/host-utils/src/: strings.rs
src/crates/testing/host-utils/src/strings/: mod.rs
src/crates/testing/host-utils/src/strings/utf8/: all_chars.rs  mod.rs  whitespace_chars.rs
src/scratch/poc-preempt/: poc-preempt.c
