[workspace]
members = [
    "crates/boards/*/*",
    "crates/config",
    "crates/config/procmacro",
    "crates/drivers/*",
    "crates/kernel",
    "crates/drivers/*",
    "crates/mcus/*/*",
    "crates/os"]

default-members = ["crates/os"]

resolver = "3"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
debug = true
panic = "abort"
