[package]
name = "smeg-config-procmacro"
version = "0.1.0"
edition = "2024"
authors = ["Pete Restall <pete@restall.net>"]

[lib]
proc-macro = true

[dependencies]
glob = "0.3.1"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.1"
serde-toml-merge = "0.3.8"
syn = { version = "2.0", features = ["full"] }
toml = "0.8"

[dev-dependencies]
fluent-test = "0.4.3"
smeg-testing-host-utils = { path = "../../testing/host-utils" }
