[package]
name = "smeg-mcu-st-stm32l432kc"
version = "0.1.0"
edition = "2024"
authors = ["Pete Restall <pete@restall.net>"]

[dependencies]
smeg-config = { path = "../../../config" }
smeg-kernel = { path = "../../../kernel" }
smeg-mcu-arm-cortex_m4_family = { path = "../../arm/cortex_m4_family"}
smeg-mcu-st-stm32_family = { path = "../stm32_family"}

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.2"
smeg-build-utils = { path = "../../../build/utils" }
smeg-config = { path = "../../../config" }

[features]
std = [
    "smeg-kernel/std",
    "smeg-mcu-arm-cortex_m4_family/std",
    "smeg-mcu-st-stm32_family/std"]

power_standby = []
